# ezparse

./: Makefile.am  README.md  autogen.sh  configure.ac
src/: Makefile-LIBADD.inc  Makefile.am  ezparse.c  ezparse.h  libezparse.c  libezparse.pc.in
