lib_LTLIBRARIES = libezparse.la
libezparse_la_SOURCES = ezparse.c
include_HEADERS = ezparse.h
#libezparse_la_CFLAGS =
#libezparse_la_LDFLAGS = -lm
libezparse_la_LIBADD = -lm

#bin_PROGRAMS = ezparse

#ezparse_SOURCES = main.c
#ezparse_LDFLAGS = -lnova -lrestart
#ezparse_LDADD = libezparse.la
#ezparse_CFLAGS =

AM_CPPFLAGS = -D__STDC_INT64__
